Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16067

SetComputerNameExW Fix Caused Regression in Hostname

    XMLWordPrintable

Details

    • 0.4.13-dev-267-g2db0e159a472aca5d1e713271a62853728b41930

    Description

      reactos-bootcd-0.4.13-dev-267  for PR#1583 caused a regression in the Hostname functions. The System Setup used the SetComputerNameExW for setting the Hostname previously and now it sets the "NV Hostname", so the Hostname is left at its registry default. The attached patch fixes this problem. I have attached a working test program that I plan to submit later as a regression test. Thanks.

      Attachments

        1. BootLog_Setting_Hostname&Computername1.png
          BootLog_Setting_Hostname&Computername1.png
          288 kB
        2. ComputerNameFail.png
          ComputerNameFail.png
          60 kB
        3. HostnameTest.zip
          13 kB
        4. ReactOSHostNameFail.png
          ReactOSHostNameFail.png
          86 kB
        5. ReactOSHostNameOK.png
          ReactOSHostNameOK.png
          94 kB
        6. Reboot_Reg_Updates_W2K3.png
          Reboot_Reg_Updates_W2K3.png
          92 kB
        7. W2K3_HostName_1st_Boot.png
          W2K3_HostName_1st_Boot.png
          90 kB
        8. wizard_c.patch
          2 kB
        9. wizard_c.patch
          1 kB

        Activity

          People

            katayama_hirofumi_mz Katayama Hirofumi MZ
            DougLyons DougLyons
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: