[SYSSETUP] Set registry hostname in WriteComputerSettings (#1589)

Based on @Doug-Lyons's patch. CORE-16067